upadated css file location

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "sass --no-source-map ./src/main.scss ./dist/styles.css"
+    "build": "sass --no-source-map ./src/main.scss ./src/styles.css"
   },
   "keywords": [],
   "author": "",
